working on jml2java translation